# cortex

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml  release.yml
docs/plugins/: GETTING_STARTED.md  HOOKS.md  README.md  SECURITY.md
examples/plugins/code-stats/: Cargo.toml  README.md  plugin.toml
examples/plugins/code-stats/src/: lib.rs
examples/plugins/hello-world/: Cargo.toml  README.md  plugin.toml
examples/plugins/hello-world/src/: lib.rs
src/cortex-app-server/src/: config.rs
src/cortex-cli/: Cargo.toml
src/cortex-cli/src/: alias_cmd.rs  plugin_cmd.rs
src/cortex-cli/src/dag_cmd/: helpers.rs
src/cortex-cli/src/exec_cmd/: autonomy.rs  runner.rs
src/cortex-common/src/: http_client.rs
src/cortex-common/src/model_presets/: mod.rs  presets.rs
src/cortex-core/src/: style.rs
src/cortex-engine/: Cargo.toml
src/cortex-engine/src/client/: cortex.rs
src/cortex-exec/src/: runner.rs
src/cortex-ghost/src/: ghost_commit.rs
src/cortex-network-proxy/src/: ip_validation.rs
src/cortex-plugins/: Cargo.toml
src/cortex-plugins/src/: error.rs  host.rs  lib.rs  registry.rs  runtime.rs  signing.rs
src/cortex-plugins/tests/: edge_case_tests.rs
src/cortex-prompt-harness/src/: builder.rs  context.rs  lib.rs  sections.rs
src/cortex-tui/: Cargo.toml
src/cortex-tui-capture/src/: exporter.rs
src/cortex-tui-components/src/: toast.rs
src/cortex-tui/src/: mcp_storage.rs  sound.rs
src/cortex-update/: Cargo.toml
src/cortex-update/src/: api.rs  config.rs  download.rs  error.rs  install.rs  lib.rs  manager.rs  method.rs  verify.rs  version.rs
(+42 files in other folders)
