[package]
name = "code-stats-plugin"
version = "1.0.0"
edition = "2021"
description = "Tracks and displays code statistics including lines added, removed, and files modified"
authors = ["Cortex Team <team@cortex.dev>"]
license = "MIT"

# Build for WASM target: cargo build --target wasm32-wasi --release

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4"

[profile.release]
opt-level = "s"
lto = true
